<resources>
    <string name="app_name" translatable="false">Switch Language Demo</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_follow">Follow</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_account">Account</string>

    <string name="setting">Setting</string>

    <string name="language_chinese" translatable="false">中文</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_arabic" translatable="false">العربية</string>
</resources>
