<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:checked="true"
        android:orderInCategory="0"
        android:icon="@drawable/menu_home"
        android:title="@string/menu_home"
        />

    <item
        android:id="@+id/menu_category"
        android:orderInCategory="1"
        android:icon="@drawable/menu_category"
        android:title="@string/menu_category"
        />

    <item
        android:id="@+id/menu_follow"
        android:orderInCategory="2"
        android:icon="@drawable/menu_follow"
        android:title="@string/menu_follow"
        />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/menu_cart"
        android:orderInCategory="3"
        android:title="@string/menu_cart"
        />

    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/menu_account"
        android:orderInCategory="4"
        android:title="@string/menu_account"
        />
</menu>