<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/chinese"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/language_chinese"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/language_english"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/chinese"/>

    <TextView
        android:id="@+id/arabic"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/language_arabic"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/english"/>
</android.support.constraint.ConstraintLayout>